<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_sign_in_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_in_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/id_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_title" />

    <EditText
        android:id="@+id/et_sign_in_inputid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/id_hint"
        android:lines="1"
        android:singleLine="true"
        android:textSize="20sp"
        android:windowSoftInputMode="adjustResize"
        app:layout_constraintStart_toStartOf="@id/tv_sign_in_id"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_id" />

    <TextView
        android:id="@+id/tv_sign_in_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/pw_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_sign_in_inputid" />

    <EditText
        android:id="@+id/et_sign_in_inputpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/pw_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:lines="1"
        android:singleLine="true"
        android:textSize="20sp"
        android:windowSoftInputMode="adjustResize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_pw" />

    <TextView
        android:id="@+id/tv_sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="22dp"
        android:text="@string/signup_button"
        android:textColor="#808080"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_sign_in_inputpw" />

    <CheckBox
        android:id="@+id/chk_sign_in_autologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="44dp"
        android:buttonTint="#808080"
        android:text="@string/auto_login_label"
        android:textColor="#808080"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_sign_in_inputpw" />

    <Button
        android:id="@+id/btn_sign_in_inbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>