<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile_frame"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="13dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name">

        <ImageView
            android:id="@+id/iv_profile_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/default_profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:text="@string/logout"
        android:textColor="#808080"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/test_nickname"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_self_description"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/your_id"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_id"
        app:layout_constraintTop_toBottomOf="@id/cv_profile_frame" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/test_nickname"
        android:textColor="#808080"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_title_MBTI"
        app:layout_constraintTop_toBottomOf="@id/tv_title_id" />

    <TextView
        android:id="@+id/tv_title_MBTI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/your_mbti"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_MBTI"
        app:layout_constraintTop_toBottomOf="@id/tv_title_MBTI" />

    <TextView
        android:id="@+id/tv_MBTI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/test_nickname"
        android:textColor="#808080"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_MBTI" />

    <TextView
        android:id="@+id/tv_self_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:text="@string/test_text"
        android:textColor="#808080"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_upper_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="&quot;"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_self_description" />

    <TextView
        android:id="@+id/tv_lower_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="&quot;"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_self_description"
        />



</androidx.constraintlayout.widget.ConstraintLayout>